roles/iptables/files/iptables.rules
# Generated by iptables-save v1.4.21 on Tue Oct 27 14:37:58 2015
*mangle
:PREROUTING ACCEPT [360:31225]
:INPUT ACCEPT [353:30873]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [323:39708]
:POSTROUTING ACCEPT [314:36016]
COMMIT
# Completed on Tue Oct 27 14:37:58 2015
# Generated by iptables-save v1.4.21 on Tue Oct 27 14:37:58 2015
*nat
:PREROUTING ACCEPT [26:2117]
:INPUT ACCEPT [2:420]
:OUTPUT ACCEPT [14:4088]
:POSTROUTING ACCEPT [1:92]
-A POSTROUTING -o eth0 -j MASQUERADE
-A POSTROUTING -o wlan1 -j MASQUERADE
COMMIT
# Completed on Tue Oct 27 14:37:58 2015
# Generated by iptables-save v1.4.21 on Tue Oct 27 14:37:58 2015
*filter
:INPUT DROP [17:1345]
:FORWARD DROP [0:0]
:OUTPUT DROP [9:3692]
-A INPUT -i wlan0 -p tcp -m tcp --dport 80 -m string --string "Host: 192.168.2.1" --algo bm --to 700 -j DROP
-A INPUT -i wlan1 -p tcp -m tcp --dport 80 -m string --string "Host: 192.168.2.1" --algo bm --to 700 -j DROP
-A INPUT -i eth0 -p tcp -m tcp --dport 80 -m string --string "Host: 192.168.2.1" --algo bm --to 700 -j DROP
-A INPUT -i wlan0 -p tcp -m tcp --dport 80 -m string --string "GET /w00tw00t.at." --algo bm --to 70 -j DROP
-A INPUT -i wlan1 -p tcp -m tcp --dport 80 -m string --string "GET /w00tw00t.at." --algo bm --to 70 -j DROP
-A INPUT -i eth0 -p tcp -m tcp --dport 80 -m string --string "GET /w00tw00t.at." --algo bm --to 70 -j DROP
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 68 -j ACCEPT
-A INPUT -p udp -m udp --dport 68 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 9990 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -m state --state ESTABLISHED -j ACCEPT
-A FORWARD -i eth0 -o wlan0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wlan0 -o eth0 -j ACCEPT
-A FORWARD -i wlan1 -o wlan0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wlan0 -o wlan1 -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 67 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 67 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 68 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 123 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 9990 -j ACCEPT
COMMIT
# Completed on Tue Oct 27 14:37:58 2015
